Image extension changed

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <section id="page1">
         <h1>Happy Valentine's Day</h1>
         <div class="frame-hero">
-            <img src="v1.jpg" alt="Valentine">
+            <img src="v1.JPG" alt="Valentine">
         </div>
         <div class="quote">"In all the world, there is no heart for me like yours. In all the world, there is no love for you like mine."</div>
         <p>To my beautiful wife, here is a look back at our magic.</p>
@@ -159,10 +159,10 @@
         <h2>Our Engagement</h2>
         <div class="quote">"The best thing to hold onto in life is each other. On Feb 20, 2025, I promised to never let go of your hand."</div>
         <div class="photo-grid">
-            <div class="frame-polaroid"><img src="e1.jpg"></div>
-            <div class="frame-polaroid"><img src="e2.jpg"></div>
-            <div class="frame-polaroid"><img src="e3.jpg"></div>
-            <div class="frame-polaroid"><img src="e4.jpg"></div>
+            <div class="frame-polaroid"><img src="e1.JPG"></div>
+            <div class="frame-polaroid"><img src="e2.JPG"></div>
+            <div class="frame-polaroid"><img src="e3.JPG"></div>
+            <div class="frame-polaroid"><img src="e4.JPG"></div>
         </div>
         <p>A promise of forever.</p>
         <a href="#page4" class="btn-next">The Wedding Day</a>
@@ -198,7 +198,7 @@
         </p>
     </div>
 
-    <h2 style="font-size: 3rem; animation: pulse 1.5s infinite; margin-top: 50px;">व्हॅलेंटाईन डे च्या हार्दिक शुभेच्छा!</h2>
+    <h2 style="font-size: 3rem; animation: pulse 1.5s infinite; margin-top: 50px;">व्हॅलेंटाईन डे च्या हार्दिक शुभेच्छा! पुजा</h2>
 </section>
 
     <script>
